--- a/Config.json
+++ b/Config.json
@@ -46,7 +46,7 @@
     "size": "183964107",
     "url": "https://www.mediafire.com/file/68yzpplz4o52qjw/d1236d17885d06d41a340e9bf8edf0ad.zip/file",
     "path": "Android/data/%s",
-    "vpn": "NextDNS-c62d32",
+    "vpn": "Demoder VPN",
     "title": "Menu Data Nhân Vật Nhìn Xuyên Tường Antiban ver Dragon",
     "sub": "V1.105.7 • Menu • Data • ",
     "icon": "https://i.pinimg.com/564x/d8/94/59/d89459297fc432032b0198d98829ac59.jpg",
