--- a/Config.json
+++ b/Config.json
@@ -42,13 +42,13 @@
     "time": "22:00 14-07-2024",
     "menu": "true",
     "game": "ffn-ffm",
-    "source": "/dragon/d1236d17885d06d41a340e9bf8edf0ad.zip",
-    "size": "183964107",
-    "url": "https://www.mediafire.com/file/68yzpplz4o52qjw/d1236d17885d06d41a340e9bf8edf0ad.zip/file",
+    "source": "/dragon/PoListNameFile.zip",
+    "size": "83421301",
+    "url": "https://www.mediafire.com/file/86wk9zsaaf7m9yf/PoListNameFile.zip/file",
     "path": "Android/data/%s",
     "vpn": "Demoder VPN",
     "title": "Menu Data Nhân Vật Nhìn Xuyên Tường Antiban ver Dragon",
-    "sub": "V1.105.7 • Menu • Data • ",
+    "sub": "V1.105.X • Menu • Data • ",
     "icon": "https://i.pinimg.com/564x/d8/94/59/d89459297fc432032b0198d98829ac59.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/obPAbCX-6Fg\"},{\"image\":\"https://i.ibb.co/CvgTSkC/IMG-20240612-151330.webp\"},{\"image\":\"https://i.ibb.co/4dnFQvC/IMG-20240612-151314.webp\"}]"
   },
