--- a/Config.json
+++ b/Config.json
@@ -41,7 +41,7 @@
     "safe": "80",
     "time": "22:00 14-07-2024",
     "menu": "true",
-    "game": "ffn-ffm",
+    "game": "ffn",
     "source": "/dragon/PoListNameFile.zip",
     "size": "83421301",
     "url": "https://www.mediafire.com/file/86wk9zsaaf7m9yf/PoListNameFile.zip/file",
