--- a/Config.json
+++ b/Config.json
@@ -1,4 +1,21 @@
 [
+    {
+    "id": "0007",
+    "status": "true",
+    "safe": "80",
+    "time": "17:00 01-08-2024",
+    "menu": "true",
+    "game": "ffn",
+    "source": "/dino/04575e7f55b1eb84cb8e30d79cd53ac5.zip",
+    "size": "",
+    "url": "",
+    "path": "Android/data/%s",
+    "vpn": "Demoder VPN",
+    "title": "Menu Data Regedit 1.0 Người Xanh ver Dino",
+    "sub": "V1.105.10 • Menu • Data • ",
+    "icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
+    "listImage": "[{\"image\":\"https://youtu.be/I_SIteaVh7o\"}]"
+  },
   {
     "id": "0006",
     "status": "false",
