--- a/Config.json
+++ b/Config.json
@@ -7,7 +7,7 @@
     "menu": "true",
     "game": "ffn",
     "source": "/dino/04575e7f55b1eb84cb8e30d79cd53ac5.zip",
-    "size": "",
+    "size": "427021312324",
     "url": "",
     "path": "Android/data/%s",
     "vpn": "Demoder VPN",
