--- a/Config.json
+++ b/Config.json
@@ -11,7 +11,7 @@
     "url": "https://www.mediafire.com/file/s6n1cycui0arv4d/04575e7f55b1eb84cb8e30d79cd53ac5.zip/file",
     "path": "Android/data/%s",
     "vpn": "Demoder VPN",
-    "title": "Menu Data Regedit 1.0 Người Xanh ver Dino",
+    "title": "[Data] Menu Regedit 1.0 Người Xanh ver Dino",
     "sub": "V1.105.10 • Menu • Data • ",
     "icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/I_SIteaVh7o\"}]"
