--- a/Config.json
+++ b/Config.json
@@ -14,7 +14,7 @@
     "title": "[Data] Menu Regedit 1.0 Người Xanh ver Dino",
     "sub": "V1.105.10 • Menu • Data • ",
     "icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
-    "listImage": "[{\"image\":\"https://youtu.be/I_SIteaVh7o\"}]"
+    "listImage": "[{\"image\":\"https://youtu.be/rk1DhPh-0GM\"}]"
   },
   {
     "id": "0002",
