--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -6,7 +6,7 @@
     "fileName": "Demoder 1.4.2.apk",
     "fileSize": "5715198",
     "download": "https://www.mediafire.com/file/bz6begsfkjxdxjj/Demoder_1.4.2.apk/file",
-    "detail": "1. Thêm tính năng Demoder VPN (Tường lửa dành riêng cho Free Fire) 🔥\n2. Thêm Config mới (Dino) 🌟\n3. Tạm ngừng mục khám phá 😿\n4. Vá một số lỗi và cải thiện hiệu suất ứng dụng 💥"
+    "detail": "1. Fix lỗi VPN trên Android 14 🔥"
   },
   {
     "home": false,
