--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,12 +1,12 @@
 [
   {
     "maintenance": false,
-    "versionCode": 21,
-    "versionName": "V.1.4.2",
-    "fileName": "Demoder 1.4.2.apk",
-    "fileSize": "5715198",
-    "download": "https://www.mediafire.com/file/bz6begsfkjxdxjj/Demoder_1.4.2.apk/file",
-    "detail": "1. Fix lỗi VPN trên Android 14 🔥"
+    "versionCode": 22,
+    "versionName": "V.1.4.3",
+    "fileName": "Demoder 1.4.3.apk",
+    "fileSize": "5715430",
+    "download": "https://www.mediafire.com/file/hooaloe1cmykmok/Demoder+1.4.3.apk/file",
+    "detail": "1. Đưa Menu vào dạng chạy nền hỗ trợ tất cả máy RAM yếu ✨\n2. Vá một số lỗi bảo mật hệ thống ❤️"
   },
   {
     "home": false,
