--- a/Config.json
+++ b/Config.json
@@ -2,13 +2,13 @@
      {
     "id": "0008",
     "status": "true",
-    "safe": "80",
-    "time": "00:00 06-08-2024",
+    "safe": "60",
+    "time": "00:00 08-08-2024",
     "menu": "true",
     "game": "ffa",
-    "source": "/wolf/97whi32hkdb28682y.zip",
-    "size": "94676146",
-    "url": "https://www.mediafire.com/file/s6n1cycui0arv4d/04575e7f55b1eb84cb8e30d79cd53ac5.zip/file",
+    "source": "/Lion/h972hd0u3hrfu0pqmdcnw692ge8d9",
+    "size": "13912",
+    "url": "https://www.mediafire.com/file/x2d73aq44wrkvjf/h972hd0u3hrfu0pqmdcnw692ge8d9/file",
     "path": "Android/obb/%s",
     "vpn": "Demoder VPN",
     "title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
