--- a/Config.json
+++ b/Config.json
@@ -6,9 +6,9 @@
     "time": "00:00 08-08-2024",
     "menu": "true",
     "game": "ffa",
-    "source": "/Lion/h972hd0u3hrfu0pqmdcnw692ge8d9",
-    "size": "13912",
-    "url": "https://www.mediafire.com/file/x2d73aq44wrkvjf/h972hd0u3hrfu0pqmdcnw692ge8d9/file",
+    "source": "/Lion/010b439235a70f3499d245f8a081ce4f.resource",
+    "size": "2334",
+    "url": "https://www.mediafire.com/file/4n0zmwc5spd2yy5/010b439235a70f3499d245f8a081ce4f.resource/file",
     "path": "Android/obb/%s",
     "vpn": "Demoder VPN",
     "title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
