--- a/Config.json
+++ b/Config.json
@@ -5,7 +5,7 @@
     "safe": "80",
     "time": "00:00 13-08-2024",
     "menu": "true",
-    "game": "ff",
+    "game": "ffn",
     "source": "/Owl/010b439235a70f3499d245f8a081ce4f.resource",
     "size": "2334",
     "url": "https://www.mediafire.com/file/4n0zmwc5spd2yy5/010b439235a70f3499d245f8a081ce4f.resource/file",
