--- a/Config.json
+++ b/Config.json
@@ -3,12 +3,12 @@
     "id": "0009",
     "status": "true",
     "safe": "80",
-    "time": "00:00 13-08-2024",
+    "time": "00:00 14-08-2024",
     "menu": "true",
     "game": "ffn",
-    "source": "/Owl/010b439235a70f3499d245f8a081ce4f.resource",
-    "size": "2334",
-    "url": "https://www.mediafire.com/file/4n0zmwc5spd2yy5/010b439235a70f3499d245f8a081ce4f.resource/file",
+    "source": "/Owl/83719364018382919301.zip",
+    "size": "126579836",
+    "url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
     "path": "Android/data/%s",
     "vpn": "Demoder VPN",
     "title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
