--- a/Config.json
+++ b/Config.json
@@ -3,7 +3,7 @@
     "id": "0009",
     "status": "true",
     "safe": "80",
-    "time": "00:00 14-08-2024",
+    "time": "00:00:00 14-08-2024",
     "menu": "true",
     "game": "ffn",
     "source": "/Owl/83719364018382919301.zip",
@@ -12,7 +12,7 @@
     "path": "Android/data/%s",
     "vpn": "Demoder VPN",
     "title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
-    "sub": "V1.105.X • Menu • Data • ",
+    "sub": "V1.105.X • Menu • Data",
     "icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/rk1DhPh-0GM\"}]"
   },
@@ -20,7 +20,7 @@
     "id": "0008",
     "status": "true",
     "safe": "60",
-    "time": "00:00 08-08-2024",
+    "time": "00:00:00 08-08-2024",
     "menu": "true",
     "game": "ffa",
     "source": "/Lion/010b439235a70f3499d245f8a081ce4f.resource",
@@ -29,7 +29,7 @@
     "path": "Android/obb/%s",
     "vpn": "Demoder VPN",
     "title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
-    "sub": "V1.105.X • Menu • OBB • ",
+    "sub": "V1.105.X • Menu • OBB",
     "icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/rk1DhPh-0GM\"}]"
   },
@@ -37,7 +37,7 @@
     "id": "0007",
     "status": "true",
     "safe": "80",
-    "time": "17:00 01-08-2024",
+    "time": "17:00:00 01-08-2024",
     "menu": "true",
     "game": "ffn",
     "source": "/dino/04575e7f55b1eb84cb8e30d79cd53ac5.zip",
@@ -46,7 +46,7 @@
     "path": "Android/data/%s",
     "vpn": "Demoder VPN",
     "title": "[Data] Menu Regedit 1.0 Người Xanh ver Dino",
-    "sub": "V1.105.10 • Menu • Data • ",
+    "sub": "V1.105.10 • Menu • Data",
     "icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
     "listImage": "[{\"image\":\"https://youtu.be/rk1DhPh-0GM\"}]"
   }
