--- a/ApplicationData.json
+++ b/ApplicationData.json
@@ -1,6 +1,6 @@
 [
   {
-    "maintenance": false,
+    "maintenance": true,
     "versionCode": 22,
     "versionName": "V.1.4.3",
     "fileName": "Demoder 1.4.3.apk",
