--- a/Config.json
+++ b/Config.json
@@ -1,29 +1,48 @@
 [
      {
-    "id": "0009",
-    "status": "true",
-    "safe": "80",
-    "time": "00:00:00 14-08-2024",
-    "menu": "true",
-    "game": "ffn",
-    "source": "/Owl/83719364018382919301.zip",
-    "size": "126579836",
-    "url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
-    "path": "Android/data/%s",
-    "vpn": "Demoder VPN",
-    "title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
-    "sub": "V1.105.X • Menu • Data",
-    "icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
-    "listImage": "[{\"image\":\"https://youtu.be/rk1DhPh-0GM\"}]"
-  },
+          "id": "0009",
+          "config_title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
+          "config_subtitle": "V1.105.X • Menu • Data",
+          "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
+          "config_list_image": ["https://youtu.be/rk1DhPh-0GM"],
+          "game_support": "ffn",
+          "is_active": true,
+          "has_menu": true,
+          "antiban_level": 80,
+          "update_time": "00:00:00 14-08-2024",
+          "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
+          "file_name": "83719364018382919301.zip",
+          "file_size": "126579836",
+          "source_path": "/Owl",
+          "target_path": "Android/data/%s",
+          "has_vpn": "Demoder VPN"
+     },
      {
-    "id": "0008",
-    "status": "true",
-    "safe": "60",
-    "time": "00:00:00 08-08-2024",
-    "menu": "true",
-    "game": "ffa",
-    "source": "/Lion/010b439235a70f3499d245f8a081ce4f.resource",
+          "id": "",
+          "config_title": "",
+          "config_subtitle": "",
+          "config_icon": "",
+          "config_list_image": "",
+          "game_support": "",
+          "is_active": true,
+          "has_menu": true,
+          "antiban_level": "",
+          "update_time": "",
+          "download_url": "",
+          "file_name": "",
+          "file_size": "",
+          "source_path": "",
+          "target_path": "",
+          "has_vpn": ""
+     },
+     {
+          "id": "0008",
+          "status": "true",
+          "safe": "60",
+          "time": "00:00:00 08-08-2024",
+          "menu": "true",
+          "game": "ffa",
+          "source": "/Lion/010b439235a70f3499d245f8a081ce4f.resource",
     "size": "2334",
     "url": "https://www.mediafire.com/file/4n0zmwc5spd2yy5/010b439235a70f3499d245f8a081ce4f.resource/file",
     "path": "Android/obb/%s",
