--- a/Config.json
+++ b/Config.json
@@ -12,61 +12,45 @@
           "update_time": "00:00:00 14-08-2024",
           "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
           "file_name": "83719364018382919301.zip",
-          "file_size": "126579836",
+          "file_size": 126579836,
           "source_path": "/Owl",
           "target_path": "Android/data/%s",
           "has_vpn": "Demoder VPN"
      },
      {
-          "id": "",
-          "config_title": "",
-          "config_subtitle": "",
-          "config_icon": "",
-          "config_list_image": "",
-          "game_support": "",
+          "id": "0008",
+          "config_title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
+          "config_subtitle": "V1.105.X • Menu • OBB",
+          "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
+          "config_list_image": [],
+          "game_support": "ffn",
           "is_active": true,
           "has_menu": true,
-          "antiban_level": "",
-          "update_time": "",
-          "download_url": "",
-          "file_name": "",
-          "file_size": "",
-          "source_path": "",
-          "target_path": "",
-          "has_vpn": ""
+          "antiban_level": 60,
+          "update_time": "00:00:00 08-08-2024",
+          "download_url": "https://www.mediafire.com/file/4n0zmwc5spd2yy5/010b439235a70f3499d245f8a081ce4f.resource/file",
+          "file_name": "010b439235a70f3499d245f8a081ce4f.resource",
+          "file_size": 2334,
+          "source_path": "/Lion",
+          "target_path": "Android/obb/%s",
+          "has_vpn": "Demoder VPN"
      },
      {
-          "id": "0008",
-          "status": "true",
-          "safe": "60",
-          "time": "00:00:00 08-08-2024",
-          "menu": "true",
-          "game": "ffa",
-          "source": "/Lion/010b439235a70f3499d245f8a081ce4f.resource",
-    "size": "2334",
-    "url": "https://www.mediafire.com/file/4n0zmwc5spd2yy5/010b439235a70f3499d245f8a081ce4f.resource/file",
-    "path": "Android/obb/%s",
-    "vpn": "Demoder VPN",
-    "title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
-    "sub": "V1.105.X • Menu • OBB",
-    "icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
-    "listImage": "[{\"image\":\"https://youtu.be/rk1DhPh-0GM\"}]"
-  },
- {
-    "id": "0007",
-    "status": "true",
-    "safe": "80",
-    "time": "17:00:00 01-08-2024",
-    "menu": "true",
-    "game": "ffn",
-    "source": "/dino/04575e7f55b1eb84cb8e30d79cd53ac5.zip",
-    "size": "94676146",
-    "url": "https://www.mediafire.com/file/s6n1cycui0arv4d/04575e7f55b1eb84cb8e30d79cd53ac5.zip/file",
-    "path": "Android/data/%s",
-    "vpn": "Demoder VPN",
-    "title": "[Data] Menu Regedit 1.0 Người Xanh ver Dino",
-    "sub": "V1.105.10 • Menu • Data",
-    "icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
-    "listImage": "[{\"image\":\"https://youtu.be/rk1DhPh-0GM\"}]"
-  }
+          "id": "0007",
+          "config_title": "[Data] Menu Regedit 1.0 Người Xanh ver Dino",
+          "config_subtitle": "V1.105.10 • Menu • Data",
+          "config_icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
+          "config_list_image": ["https://youtu.be/rk1DhPh-0GM"],
+          "game_support": "ffn",
+          "is_active": true,
+          "has_menu": true,
+          "antiban_level": 80,
+          "update_time": "17:00:00 01-08-2024",
+          "download_url": "https://www.mediafire.com/file/s6n1cycui0arv4d/04575e7f55b1eb84cb8e30d79cd53ac5.zip/file",
+          "file_name": "04575e7f55b1eb84cb8e30d79cd53ac5.zip",
+          "file_size": 94676146,
+          "source_path": "/Dino",
+          "target_path": "Android/data/%s",
+          "has_vpn": "Demoder VPN"
+     }
 ]
