--- a/Config.json
+++ b/Config.json
@@ -22,7 +22,7 @@
           "config_title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
           "config_subtitle": "V1.105.X • Menu • OBB",
           "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
-          "config_list_image": [],
+          "config_list_image": ["https://youtu.be/rk1DhPh-0GM"],
           "game_support": "ffn",
           "is_active": true,
           "has_menu": true,
