--- a/Config.json
+++ b/Config.json
@@ -13,6 +13,7 @@
           "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
           "file_name": "83719364018382919301.zip",
           "file_size": 126579836,
+          "file_list_name": [],
           "source_path": "/Owl",
           "target_path": "Android/data/%s",
           "has_vpn": "Demoder VPN"
@@ -28,9 +29,10 @@
           "has_menu": true,
           "antiban_level": 60,
           "update_time": "00:00:00 08-08-2024",
-          "download_url": "https://www.mediafire.com/file/4n0zmwc5spd2yy5/010b439235a70f3499d245f8a081ce4f.resource/file",
-          "file_name": "010b439235a70f3499d245f8a081ce4f.resource",
-          "file_size": 2334,
+          "download_url": "https://www.mediafire.com/file/kihkgv8ch2h41lq/config.zip/file",
+          "file_name": "config.zip",
+          "file_size": 12359323,
+          "file_list_name": ["config.1", "config.2", "config.3"],
           "source_path": "/Lion",
           "target_path": "Android/obb/%s",
           "has_vpn": "Demoder VPN"
@@ -49,6 +51,7 @@
           "download_url": "https://www.mediafire.com/file/s6n1cycui0arv4d/04575e7f55b1eb84cb8e30d79cd53ac5.zip/file",
           "file_name": "04575e7f55b1eb84cb8e30d79cd53ac5.zip",
           "file_size": 94676146,
+          "file_list_name": [],
           "source_path": "/Dino",
           "target_path": "Android/data/%s",
           "has_vpn": "Demoder VPN"
