--- a/Config.json
+++ b/Config.json
@@ -38,6 +38,44 @@
           "has_vpn": "Demoder VPN"
      },
      {
+          "id": "0009",
+          "config_title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
+          "config_subtitle": "V1.105.X • Menu • Data",
+          "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
+          "config_list_image": ["https://youtu.be/rk1DhPh-0GM", "https://i.pinimg.com/736x/d6/1c/d3/d61cd3ac6042a3f2c7c5afd3f3e005a3.jpg", "https://i.pinimg.com/564x/b6/be/62/b6be6259e0e507701322a8edab5a14aa.jpg", "https://i.pinimg.com/736x/17/0b/49/170b49584e5a54db82100c2ab79d9da1.jpg"],
+          "game_support": "ffn",
+          "is_active": true,
+          "has_menu": true,
+          "antiban_level": 80,
+          "update_time": "00:00:00 14-08-2024",
+          "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
+          "file_name": "83719364018382919301.zip",
+          "file_size": 126579836,
+          "file_list_name": [],
+          "source_path": "/Owl",
+          "target_path": "Android/data/%s",
+          "has_vpn": "Demoder VPN"
+     },
+     {
+          "id": "0008",
+          "config_title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
+          "config_subtitle": "V1.105.X • Menu • OBB",
+          "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
+          "config_list_image": ["https://youtu.be/rk1DhPh-0GM"],
+          "game_support": "ffn",
+          "is_active": true,
+          "has_menu": true,
+          "antiban_level": 60,
+          "update_time": "00:00:00 08-08-2024",
+          "download_url": "https://www.mediafire.com/file/kihkgv8ch2h41lq/config.zip/file",
+          "file_name": "config.zip",
+          "file_size": 12359323,
+          "file_list_name": ["config.1", "config.2", "config.3"],
+          "source_path": "/Lion",
+          "target_path": "Android/obb/%s",
+          "has_vpn": "Demoder VPN"
+     },
+     {
           "id": "0007",
           "config_title": "[Data] Menu Regedit 1.0 Người Xanh ver Dino",
           "config_subtitle": "V1.105.10 • Menu • Data",
