--- a/Config.json
+++ b/Config.json
@@ -6,6 +6,7 @@
           "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
           "config_list_image": ["https://youtu.be/rk1DhPh-0GM", "https://i.pinimg.com/736x/d6/1c/d3/d61cd3ac6042a3f2c7c5afd3f3e005a3.jpg", "https://i.pinimg.com/564x/b6/be/62/b6be6259e0e507701322a8edab5a14aa.jpg", "https://i.pinimg.com/736x/17/0b/49/170b49584e5a54db82100c2ab79d9da1.jpg"],
           "game_support": "ffn",
+          "is_pro": true,
           "is_active": true,
           "has_menu": true,
           "antiban_level": 80,
@@ -25,6 +26,7 @@
           "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
           "config_list_image": ["https://youtu.be/rk1DhPh-0GM"],
           "game_support": "ffn",
+          "is_pro": false,
           "is_active": true,
           "has_menu": true,
           "antiban_level": 60,
@@ -44,6 +46,7 @@
           "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
           "config_list_image": ["https://youtu.be/rk1DhPh-0GM", "https://i.pinimg.com/736x/d6/1c/d3/d61cd3ac6042a3f2c7c5afd3f3e005a3.jpg", "https://i.pinimg.com/564x/b6/be/62/b6be6259e0e507701322a8edab5a14aa.jpg", "https://i.pinimg.com/736x/17/0b/49/170b49584e5a54db82100c2ab79d9da1.jpg"],
           "game_support": "ffn",
+          "is_pro": false,
           "is_active": true,
           "has_menu": true,
           "antiban_level": 80,
@@ -63,6 +66,7 @@
           "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
           "config_list_image": ["https://youtu.be/rk1DhPh-0GM"],
           "game_support": "ffn",
+          "is_pro": false,
           "is_active": true,
           "has_menu": true,
           "antiban_level": 60,
@@ -82,6 +86,7 @@
           "config_icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
           "config_list_image": ["https://youtu.be/rk1DhPh-0GM"],
           "game_support": "ffn",
+          "is_pro": false,
           "is_active": true,
           "has_menu": true,
           "antiban_level": 80,
