--- a/Config.json
+++ b/Config.json
@@ -27,7 +27,7 @@
           "config_list_image": ["https://youtu.be/rk1DhPh-0GM", "https://i.pinimg.com/736x/d6/1c/d3/d61cd3ac6042a3f2c7c5afd3f3e005a3.jpg", "https://i.pinimg.com/564x/b6/be/62/b6be6259e0e507701322a8edab5a14aa.jpg", "https://i.pinimg.com/736x/17/0b/49/170b49584e5a54db82100c2ab79d9da1.jpg"],
           "game_support": "ffn",
           "is_pro": false,
-          "is_active": true,
+          "is_active": false,
           "has_menu": true,
           "antiban_level": 80,
           "update_time": "00:00:00 14-08-2024",
