--- a/Config.json
+++ b/Config.json
@@ -4,8 +4,8 @@
           "config_title": "[System] Panel Regedit System ver Dragon",
           "config_subtitle": "V1.105.X • Panel • System",
           "config_icon": "https://i.pinimg.com/564x/41/38/18/413818b4327bf2361643eb59bb31f2d5.jpg",
-          "config_guide": "https://youtu.be/a-EkxCp3iEs",
-          "config_list_image": ["https://youtu.be/VB49O3l6zEE", "https://i.pinimg.com/736x/2e/12/3f/2e123ff3d3c6bcd0efd38f73f90f9188.jpg", "https://i.pinimg.com/736x/8d/58/9c/8d589cfa3fdbfc22c061e5df17f38899.jpg"],
+          "config_guide": "a-EkxCp3iEs",
+          "config_list_image": ["VB49O3l6zEE", "https://i.pinimg.com/736x/2e/12/3f/2e123ff3d3c6bcd0efd38f73f90f9188.jpg", "https://i.pinimg.com/736x/8d/58/9c/8d589cfa3fdbfc22c061e5df17f38899.jpg"],
           "game_support": "ffn-ffa-ffm",
           "is_pro": true,
           "is_active": true,
@@ -25,8 +25,8 @@
           "config_title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
           "config_subtitle": "V1.105.X • Menu • Data",
           "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
-          "config_guide": "https://youtu.be/a-EkxCp3iEs",
-          "config_list_image": ["https://youtu.be/rk1DhPh-0GM", "https://i.pinimg.com/736x/d6/1c/d3/d61cd3ac6042a3f2c7c5afd3f3e005a3.jpg", "https://i.pinimg.com/564x/b6/be/62/b6be6259e0e507701322a8edab5a14aa.jpg", "https://i.pinimg.com/736x/17/0b/49/170b49584e5a54db82100c2ab79d9da1.jpg"],
+          "config_guide": "a-EkxCp3iEs",
+          "config_list_image": ["rk1DhPh-0GM", "https://i.pinimg.com/736x/d6/1c/d3/d61cd3ac6042a3f2c7c5afd3f3e005a3.jpg", "https://i.pinimg.com/564x/b6/be/62/b6be6259e0e507701322a8edab5a14aa.jpg", "https://i.pinimg.com/736x/17/0b/49/170b49584e5a54db82100c2ab79d9da1.jpg"],
           "game_support": "ffn",
           "is_pro": false,
           "is_active": false,
@@ -46,8 +46,8 @@
           "config_title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
           "config_subtitle": "V1.105.X • Menu • OBB",
           "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
-          "config_guide": "https://youtu.be/a-EkxCp3iEs",
-          "config_list_image": ["https://youtu.be/rk1DhPh-0GM"],
+          "config_guide": "a-EkxCp3iEs",
+          "config_list_image": ["rk1DhPh-0GM"],
           "game_support": "ffn",
           "is_pro": false,
           "is_active": true,
@@ -68,7 +68,7 @@
           "config_subtitle": "V1.105.10 • Menu • Data",
           "config_icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
           "config_guide": "",
-          "config_list_image": ["https://youtu.be/rk1DhPh-0GM"],
+          "config_list_image": ["ALCCJZ-O09A"],
           "game_support": "ffn",
           "is_pro": false,
           "is_active": true,
