--- a/Config.json
+++ b/Config.json
@@ -2,7 +2,7 @@
      {
           "id": "0010",
           "config_title": "[System] Panel Regedit System ver Dragon",
-          "config_subtitle": "V1.105.X • Panel • System",
+          "config_subtitle": "5.0 (25) • Panel - System",
           "config_icon": "https://i.pinimg.com/564x/41/38/18/413818b4327bf2361643eb59bb31f2d5.jpg",
           "config_guide": "a-EkxCp3iEs",
           "config_list_image": ["VB49O3l6zEE", "https://i.pinimg.com/736x/2e/12/3f/2e123ff3d3c6bcd0efd38f73f90f9188.jpg", "https://i.pinimg.com/736x/8d/58/9c/8d589cfa3fdbfc22c061e5df17f38899.jpg"],
@@ -11,7 +11,7 @@
           "is_active": true,
           "has_menu": true,
           "antiban_level": 100,
-          "update_time": "00:00:00 14-08-2024",
+          "update_time": "00:00:00 14/08/2024",
           "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
           "file_name": "83719364018382919301.zip",
           "file_size": 126579836,
@@ -23,7 +23,7 @@
      {
           "id": "0009",
           "config_title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
-          "config_subtitle": "V1.105.X • Menu • Data",
+          "config_subtitle": "4.5 (23) • Menu - Data",
           "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
           "config_guide": "a-EkxCp3iEs",
           "config_list_image": ["rk1DhPh-0GM", "https://i.pinimg.com/736x/d6/1c/d3/d61cd3ac6042a3f2c7c5afd3f3e005a3.jpg", "https://i.pinimg.com/564x/b6/be/62/b6be6259e0e507701322a8edab5a14aa.jpg", "https://i.pinimg.com/736x/17/0b/49/170b49584e5a54db82100c2ab79d9da1.jpg"],
@@ -32,7 +32,7 @@
           "is_active": false,
           "has_menu": true,
           "antiban_level": 80,
-          "update_time": "00:00:00 14-08-2024",
+          "update_time": "00:00:00 14/08/2024",
           "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
           "file_name": "83719364018382919301.zip",
           "file_size": 126579836,
@@ -44,7 +44,7 @@
      {
           "id": "0008",
           "config_title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
-          "config_subtitle": "V1.105.X • Menu • OBB",
+          "config_subtitle": "4.0 (20) • Menu - OBB",
           "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
           "config_guide": "a-EkxCp3iEs",
           "config_list_image": ["rk1DhPh-0GM"],
@@ -53,7 +53,7 @@
           "is_active": true,
           "has_menu": true,
           "antiban_level": 60,
-          "update_time": "00:00:00 08-08-2024",
+          "update_time": "00:00:00 08/08/2024",
           "download_url": "https://www.mediafire.com/file/kihkgv8ch2h41lq/config.zip/file",
           "file_name": "config.zip",
           "file_size": 12359323,
@@ -65,7 +65,7 @@
      {
           "id": "0007",
           "config_title": "[Data] Menu Regedit 1.0 Người Xanh ver Dino",
-          "config_subtitle": "V1.105.10 • Menu • Data",
+          "config_subtitle": "3.5 (10) • Menu - Data",
           "config_icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
           "config_guide": "",
           "config_list_image": ["ALCCJZ-O09A"],
@@ -74,7 +74,7 @@
           "is_active": true,
           "has_menu": true,
           "antiban_level": 80,
-          "update_time": "17:00:00 01-08-2024",
+          "update_time": "17:00:00 01/08/2024",
           "download_url": "https://www.mediafire.com/file/s6n1cycui0arv4d/04575e7f55b1eb84cb8e30d79cd53ac5.zip/file",
           "file_name": "04575e7f55b1eb84cb8e30d79cd53ac5.zip",
           "file_size": 94676146,
