--- a/Configs.json
+++ b/Configs.json
@@ -81,6 +81,6 @@
           "file_list_name": [],
           "source_path": "/Dino",
           "target_path": "Android/data/%s",
-          "has_vpn": ""
+          "has_vpn": "Demoder VPN"
      }
 ]
