--- a/Configs.json
+++ b/Configs.json
@@ -7,7 +7,7 @@
           "config_guide": "a-EkxCp3iEs",
           "config_list_image": ["VB49O3l6zEE", "https://i.pinimg.com/736x/2e/12/3f/2e123ff3d3c6bcd0efd38f73f90f9188.jpg", "https://i.pinimg.com/736x/8d/58/9c/8d589cfa3fdbfc22c061e5df17f38899.jpg"],
           "game_support": "ffn-ffa-ffm",
-          "is_pro": true,
+          "is_pro": false,
           "is_active": true,
           "has_menu": true,
           "antiban_level": 100,
