--- a/Configs.json
+++ b/Configs.json
@@ -23,8 +23,8 @@
      {
           "id": "0010",
           "config_title": "[Data] Menu Định Vị Người Xanh ver Bear",
-          "config_subtitle": "5.0 (25) • Menu - Data",
-          "config_icon": "",
+          "config_subtitle": "4.6 (25) • Menu - Data",
+          "config_icon": "https://i.pinimg.com/564x/56/45/b1/5645b1cabb1c7d79fe12d0e78f62feea.jpg",
           "config_guide": "a-EkxCp3iEs",
           "config_list_image": ["gNIeiWA3eOw", "https://i.pinimg.com/564x/1e/41/5b/1e415b541c20ac7e1b2a6678e3d2a2ee.jpg", "https://i.pinimg.com/474x/3c/0c/24/3c0c24451b3ec36e71ac17bbed2c8472.jpg", "https://i.pinimg.com/564x/98/85/44/988544262c6f18fa7d4b47e875355230.jpg"],
           "game_support": "ffn-ffa",
@@ -53,40 +53,7 @@
           "is_active": false,
           "has_menu": true,
           "antiban_level": 80,
-          "update_time": "00:00:00 14/08/2024",
-          "download_url": "https://www.mediafire.com/file/azxt9j0t7q48e0a/83719364018382919301.zip/file",
-          "file_name": "83719364018382919301.zip",
-          "file_size": 126579836,
-          "file_list_name": [],
-          "source_path": "/Owl",
-          "target_path": "Android/data/%s",
-          "has_vpn": "Demoder VPN"
-     },
-     {
-          "id": "0008",
-          "config_title": "[OBB] Menu Regedit 4.0 & Định Vị ver Lion",
-          "config_subtitle": "4.0 (20) • Menu - OBB",
-          "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
-          "config_guide": "a-EkxCp3iEs",
-          "config_list_image": ["rk1DhPh-0GM"],
-          "game_support": "ffn",
-          "is_pro": false,
-          "is_active": true,
-          "has_menu": true,
-          "antiban_level": 60,
-          "update_time": "00:00:00 08/08/2024",
-          "download_url": "https://www.mediafire.com/file/kihkgv8ch2h41lq/config.zip/file",
-          "file_name": "config.zip",
-          "file_size": 12359323,
-          "file_list_name": ["config.1", "config.2", "config.3"],
-          "source_path": "/Lion",
-          "target_path": "Android/obb/%s",
-          "has_vpn": "Demoder VPN"
-     },
-     {
-          "id": "0007",
-          "config_title": "[Data] Menu Regedit 1.0 Người Xanh ver Dino",
-          "config_subtitle": "3.5 (10) • Menu - Data",
+          "update_time": "4.5 (10) • Menu - Data",
           "config_icon": "https://i.pinimg.com/564x/b4/67/90/b46790a9bcdadb948b89c2f542a5d065.jpg",
           "config_guide": "",
           "config_list_image": ["ALCCJZ-O09A"],
