--- a/Configs.json
+++ b/Configs.json
@@ -43,14 +43,7 @@
      },
      {
           "id": "0009",
-          "config_title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
-          "config_subtitle": "4.5 (23) • Menu - Data",
-          "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
-          "config_guide": "a-EkxCp3iEs",
-          "config_list_image": ["rk1DhPh-0GM", "https://i.pinimg.com/736x/d6/1c/d3/d61cd3ac6042a3f2c7c5afd3f3e005a3.jpg", "https://i.pinimg.com/564x/b6/be/62/b6be6259e0e507701322a8edab5a14aa.jpg", "https://i.pinimg.com/736x/17/0b/49/170b49584e5a54db82100c2ab79d9da1.jpg"],
-          "game_support": "ffn",
-          "is_pro": false,
-          "is_active": false,
+          "config_title": "[Data] Menu Cam Xa Bắn Xuyên true,
           "has_menu": true,
           "antiban_level": 80,
           "update_time": "17:00:00 01/08/2024",
