--- a/Configs.json
+++ b/Configs.json
@@ -1,4 +1,25 @@
 [
+          {
+          "id": "0012",
+          "config_title": "[System] Menu Fake Lag Mạng 999+ ver Turtle",
+          "config_subtitle": "4.9 (32) • Menu - System",
+          "config_icon": "https://i.pinimg.com/564x/f9/d7/99/f9d799ee2eb7a75457ece0212e08a80e.jpg",
+          "config_guide": "IirZmdKTXGs",
+          "config_list_image": ["-c4QtUTP908"],
+          "game_support": "ffn-ffa-ffm-fft",
+          "is_pro": false,
+          "is_active": true,
+          "has_menu": true,
+          "antiban_level": 100,
+          "update_time": "00:00:00 08/10/2024",
+          "download_url": "",
+          "file_name": "",
+          "file_size": 0,
+          "file_list_name": [],
+          "source_path": "",
+          "target_path": "Android/data/%s",
+          "has_vpn": "Custom VPN"
+     },
      {
           "id": "0011",
           "config_title": "[System] Panel Regedit System ver Dragon",
