--- a/Configs.json
+++ b/Configs.json
@@ -17,8 +17,8 @@
           "file_size": 0,
           "file_list_name": [],
           "source_path": "",
-          "target_path": "Android/data/%s",
-          "has_vpn": "Custom VPN"
+          "target_path": "",
+          "has_vpn": ""
      },
      {
           "id": "0011",
