--- a/Configs.json
+++ b/Configs.json
@@ -18,7 +18,7 @@
           "file_list_name": [],
           "source_path": "",
           "target_path": "",
-          "has_vpn": ""
+          "has_vpn": "0"
      },
      {
           "id": "0011",
