--- a/Configs.json
+++ b/Configs.json
@@ -5,6 +5,7 @@
           "config_subtitle": "4.9 (32) • Menu - System",
           "config_icon": "https://i.pinimg.com/564x/f9/d7/99/f9d799ee2eb7a75457ece0212e08a80e.jpg",
           "config_guide": "IirZmdKTXGs",
+          "config_feature": "Làm nghẽn mạng trong thời gian ngắn",
           "config_list_image": ["-c4QtUTP908"],
           "game_support": "ffn-ffa-ffm-fft",
           "is_pro": false,
@@ -27,6 +28,7 @@
           "config_subtitle": "5.0 (25) • Panel - System",
           "config_icon": "https://i.pinimg.com/564x/41/38/18/413818b4327bf2361643eb59bb31f2d5.jpg",
           "config_guide": "a-EkxCp3iEs",
+          "config_feature": "",
           "config_list_image": ["VB49O3l6zEE"],
           "game_support": "ffn-ffa-ffm",
           "is_pro": false,
@@ -49,6 +51,7 @@
           "config_subtitle": "4.6 (25) • Menu - Data",
           "config_icon": "https://i.pinimg.com/564x/56/45/b1/5645b1cabb1c7d79fe12d0e78f62feea.jpg",
           "config_guide": "a-EkxCp3iEs",
+          "config_feature": "",
           "config_list_image": ["gNIeiWA3eOw", "https://i.pinimg.com/564x/1e/41/5b/1e415b541c20ac7e1b2a6678e3d2a2ee.jpg", "https://i.pinimg.com/474x/3c/0c/24/3c0c24451b3ec36e71ac17bbed2c8472.jpg", "https://i.pinimg.com/564x/98/85/44/988544262c6f18fa7d4b47e875355230.jpg"],
           "game_support": "ffn-ffa",
           "is_pro": false,
@@ -71,6 +74,7 @@
           "config_subtitle": "4.5 (23) • Menu - Data",
           "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
           "config_guide": "a-EkxCp3iEs",
+          "config_feature": "",
           "config_list_image": ["rk1DhPh-0GM"],
           "game_support": "ffn",
           "is_pro": false,
@@ -93,6 +97,7 @@
           "config_subtitle": "4.0 (20) • Menu - OBB",
           "config_icon": "https://i.pinimg.com/564x/af/98/0d/af980d2112388c4189a840476fb7bd4b.jpg",
           "config_guide": "a-EkxCp3iEs",
+          "config_feature": "",
           "config_list_image": ["rk1DhPh-0GM"],
           "game_support": "ffn",
           "is_pro": false,
