--- a/Configs.json
+++ b/Configs.json
@@ -4,7 +4,7 @@
           "config_title": "[System] Menu Fake Lag Mạng 999+ ver Turtle",
           "config_subtitle": "4.9 (32) • Menu - System",
           "config_icon": "https://i.pinimg.com/564x/f9/d7/99/f9d799ee2eb7a75457ece0212e08a80e.jpg",
-          "config_guide": "IirZmdKTXGs",
+          "config_guide": "Sg4_rk8u-xE",
           "config_feature": "Làm nghẽn mạng trong thời gian ngắn",
           "config_list_image": ["-c4QtUTP908"],
           "game_support": "ffn-ffa-ffm-fft",
