--- a/Configs.json
+++ b/Configs.json
@@ -6,7 +6,7 @@
           "config_icon": "https://i.pinimg.com/564x/f9/d7/99/f9d799ee2eb7a75457ece0212e08a80e.jpg",
           "config_guide": "Sg4_rk8u-xE",
           "config_feature": "Làm nghẽn mạng trong thời gian ngắn",
-          "config_list_image": ["-c4QtUTP908"],
+          "config_list_image": ["-c4QtUTP908", "https://i.imgur.com/u1CXtGe.jpeg", "https://i.imgur.com/WYv4Kjg.jpeg"],
           "game_support": "ffn-ffa-ffm-fft",
           "is_pro": false,
           "is_active": true,
