--- a/Configs.json
+++ b/Configs.json
@@ -75,10 +75,10 @@
           "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
           "config_guide": "a-EkxCp3iEs",
           "config_feature": "",
-          "config_list_image": ["rk1DhPh-0GM"],
+          "config_list_image": ["rk1DhPh-0GM", "https://i.imgur.com/TB2661M.jpeg"],
           "game_support": "ffn",
           "is_pro": false,
-          "is_active": true,
+          "is_active": false,
           "has_menu": true,
           "antiban_level": 80,
           "update_time": "00:00:00 14/08/2024",
