--- a/Configs.json
+++ b/Configs.json
@@ -2,17 +2,17 @@
           {
           "id": "0012",
           "config_title": "[System] Menu Làm Nghẽn Mạng 999+ ver Turtle",
-          "config_subtitle": "4.9 (32) • Menu - System",
+          "config_subtitle": "4.9 (38) • Menu - System",
           "config_icon": "https://i.pinimg.com/564x/f9/d7/99/f9d799ee2eb7a75457ece0212e08a80e.jpg",
           "config_guide": "Sg4_rk8u-xE",
           "config_feature": "Làm nghẽn mạng trong thời gian ngắn",
-          "config_list_image": ["-c4QtUTP908", "https://i.imgur.com/EwNXvMZ.jpeg", "https://i.imgur.com/WYv4Kjg.jpeg"],
+          "config_list_image": ["4zW6oOQpI_I", "https://i.imgur.com/EwNXvMZ.jpeg", "https://i.imgur.com/WYv4Kjg.jpeg"],
           "game_support": "ffn-ffa-ffm-fft",
           "is_pro": false,
           "is_active": true,
           "has_menu": true,
           "antiban_level": 100,
-          "update_time": "00:00:00 08/10/2024",
+          "update_time": "00:00:00 14/10/2024",
           "download_url": "",
           "file_name": "",
           "file_size": 0,
@@ -71,14 +71,14 @@
       {
           "id": "0009",
           "config_title": "[Data] Menu Cam Xa Bắn Xuyên Tường ver Owl",
-          "config_subtitle": "4.5 (23) • Menu - Data",
+          "config_subtitle": "0.0 (0) • Menu - Data",
           "config_icon": "https://i.pinimg.com/564x/99/6e/d0/996ed0454abf73b35c3b946465cc1d94.jpg",
           "config_guide": "a-EkxCp3iEs",
           "config_feature": "",
           "config_list_image": ["rk1DhPh-0GM", "https://i.imgur.com/TB2661M.jpeg"],
           "game_support": "ffn",
           "is_pro": false,
-          "is_active": true,
+          "is_active": false,
           "has_menu": true,
           "antiban_level": 80,
           "update_time": "00:00:00 14/08/2024",
