--- a/Configs.json
+++ b/Configs.json
@@ -6,13 +6,13 @@
           "config_icon": "https://i.pinimg.com/564x/f9/d7/99/f9d799ee2eb7a75457ece0212e08a80e.jpg",
           "config_guide": "Sg4_rk8u-xE",
           "config_feature": "Làm nghẽn mạng trong thời gian ngắn",
-          "config_list_image": ["4zW6oOQpI_I", "https://i.imgur.com/EwNXvMZ.jpeg", "https://i.imgur.com/WYv4Kjg.jpeg"],
+          "config_list_image": ["LNgUyEV9BBo", "4zW6oOQpI_I", "https://i.imgur.com/EwNXvMZ.jpeg", "https://i.imgur.com/WYv4Kjg.jpeg"],
           "game_support": "ffn-ffa-ffm-fft",
           "is_pro": false,
           "is_active": true,
           "has_menu": true,
           "antiban_level": 100,
-          "update_time": "00:00:00 14/10/2024",
+          "update_time": "00:00:00 18/10/2024",
           "download_url": "",
           "file_name": "",
           "file_size": 0,
