--- a/Configs.json
+++ b/Configs.json
@@ -2,11 +2,11 @@
           {
           "id": "0012",
           "config_title": "[System] Menu Làm Nghẽn Mạng 999+ ver Turtle",
-          "config_subtitle": "4.9 (38) • Menu - System",
+          "config_subtitle": "4.9 (1.6N) • Menu - System",
           "config_icon": "https://i.pinimg.com/564x/f9/d7/99/f9d799ee2eb7a75457ece0212e08a80e.jpg",
           "config_guide": "Sg4_rk8u-xE",
           "config_feature": "Làm nghẽn mạng trong thời gian ngắn",
-          "config_list_image": ["LNgUyEV9BBo", "4zW6oOQpI_I", "https://i.imgur.com/0xy9Jcq.jpeg", "https://i.imgur.com/WYv4Kjg.jpeg"],
+          "config_list_image": ["LNgUyEV9BBo", "4zW6oOQpI_I", "https://i.imgur.com/ChWj1f8.jpeg", "https://i.imgur.com/WYv4Kjg.jpeg"],
           "game_support": "ffn-ffa-ffm-fft",
           "is_pro": false,
           "is_active": true,
